--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
+    "module": "ESNext",
+    "jsx": "react",
     "outDir": "./dist",
-    "esModuleInterop": true, 
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,     
+    "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
-    "rootDir": "./src"       
+    "forceConsistentCasingInFileNames": true,
+    "rootDir": "./src"
   },
-
-   "include": ["./src"],
-   "exclude": []
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
