--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -22,7 +25,6 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-redux": "^7.1.34",
-    "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.31",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
