added validationfunction for time/date, user won't be able to book a date/time that has already  passed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "module": "ESNext",
     "jsx": "react",
     "outDir": "./dist",
+    "rootDir": "./src",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "baseUrl": "./src",  // Optional if you have an SRC directory
+    "baseUrl": "./src",
     "paths": {
       "*": ["node_modules/*"]
     }
