--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
